# TransformerHyphen

./: .gitignore  LICENSE  README.adoc  README.md  configuration.yml  evaluate.py  grid_run.py  inference.py  inference_onxx.py  pyproject.toml  requirements.txt  train.py
data/: test_text.txt
datasets/: Oxford 5000.txt  cs-dummy.wlh
demos/wortliste-build/: common_mispredicted.txt  conf.pk  configuration.yml  model  output_model.pth  quant_output_model.pth  test_dataset.wlh  wrong_predicted.txt
demos/wortliste-build/patgen/: exceptions.tex  final_patterns.tex  patgen_mispredicted.txt  patterns.tex
src/: ConfDict.py  ModelDict.py  constants.py  dataset.py  encoding.py  evaluation.py  model.py  patgen.py  training.py  utils.py
src/encodings/: binary.py  embedding.py  float.py
src/models/: advanced_transformer.py  combined_transformer.py  modules.py  simple_mlp.py  simple_transformer.py
